Bug 372190 - Difficult crash when using a sketchbrush on the preview windows of the brush settings window.
Summary: Difficult crash when using a sketchbrush on the preview windows of the brush ...
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Brush engines (other bugs)
Version First Reported In: git master (please specify the git hash!)
Platform: Other Linux
: NOR crash
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
: 372238 (view as bug list)
Depends on:
Blocks:
 
Reported: 2016-11-07 16:54 UTC by wolthera
Modified: 2016-11-09 15:00 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description wolthera 2016-11-07 16:54:03 UTC
I say difficult, because due the way the dropdown works, I can't switch away from it to the terminal to get a proper backtrace and have to killall gdb via ctrl+alt+f1.

This is all I've got:

Thread 240 "Thread (pooled)" received signal SIGSEGV, Segmentation fault.
[Switching to Thread 0x7fffb2247700 (LWP 7126)]
0x00007ffff2dbae2d in KisPostExecutionUndoAdapter::addCommand (this=this@entry=0x0, command=...)
    at /home/krita/kde/src/krita/libs/image/kis_post_execution_undo_adapter.cpp:36
36	    KisSavedCommand *m = new KisSavedCommand(command, m_strokesFacade);
(gdb) Exception ignored in: <gdb.GdbOutputFile object at 0x7f5aeafe8a58>
Traceback (most recent call last):
  File "/usr/share/gdb/python/gdb/__init__.py", line 43, in flush
    def flush(self):
KeyboardInterrupt
Comment 1 Dmitry Kazakov 2016-11-08 09:29:37 UTC
Confirm. Also crashes on usual canvas.
Comment 2 Dmitry Kazakov 2016-11-08 14:38:17 UTC
Git commit d155aec2bcdf302b33e0e4503fb2314a46044092 by Dmitry Kazakov.
Committed on 08/11/2016 at 14:37.
Pushed by dkazakov into branch 'krita/3.1'.

Fix crash when drawing in the scratch pad

It should still be possible to paint of the canvas when there is no
undo adapter present (happens in the scratch pad).
Fixes T4479

M  +11   -0    libs/ui/tool/strokes/kis_painter_based_stroke_strategy.cpp

http://commits.kde.org/krita/d155aec2bcdf302b33e0e4503fb2314a46044092
Comment 3 Dmitry Kazakov 2016-11-09 11:00:03 UTC
Git commit c4a2d62b77ee7303b445de0841eb3f1838e99adf by Dmitry Kazakov.
Committed on 09/11/2016 at 10:29.
Pushed by dkazakov into branch 'rempt/impex-refactoring'.

Fix crash when drawing in the scratch pad

It should still be possible to paint of the canvas when there is no
undo adapter present (happens in the scratch pad).
Fixes T4479

M  +11   -0    libs/ui/tool/strokes/kis_painter_based_stroke_strategy.cpp

http://commits.kde.org/krita/c4a2d62b77ee7303b445de0841eb3f1838e99adf
Comment 4 Dmitry Kazakov 2016-11-09 15:00:35 UTC
*** Bug 372238 has been marked as a duplicate of this bug. ***